--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v1 
         # this runs vcvarsall for us, so we get the MSVC toolchain in PATH. 
       - uses: seanmiddleditch/gha-setup-vsdevenv@master 
-      - name: build yarnspin
+      - name: build yarnspin 
         run: | 
           pushd build
           rc /nologo yarnspin.rc
@@ -62,15 +62,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+      - uses: robinraju/release-downloader@v1.7 
+        with: 
+          repository: "libsdl-org/SDL" 
+          tag: "release-2.28.1" 
+          fileName: "SDL2-2.28.1.tar.gz" 
       - name: install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -qq libsdl2-dev
-          sudo apt-get install -qq libglew-dev
+          sudo apt-get update 
+          sudo apt-get install -qq libglew-dev 
+          sudo apt-get install -qq llvm 
+          sudo apt-get install -qq lld 
+          sudo apt-get install -qq binaryen
+          tar -xzvf SDL2-2.28.1.tar.gz
       - name: build yarnspin
         run: |
-          gcc -o yarnspin -O2 source/yarnspin.c `sdl2-config --libs --cflags` -lGLEW -lGL -lm -lpthread 
-          gcc -o runtime -O2 -DYARNSPIN_RUNTIME_ONLY source/yarnspin.c `sdl2-config --libs --cflags` -lGLEW -lGL -lm -lpthread 
+          cd SDL2-2.28.1
+          ./configure --disable-shared --enable-static --prefix=$PWD/sdl2
+          make
+          make install
+          cd ..
+          gcc -o yarnspin -O2 source/yarnspin.c /usr/lib/x86_64-linux-gnu/libGLEW.a `$PWD/SDL2-2.28.1/sdl2/bin/sdl2-config --cflags` $PWD/SDL2-2.28.1/sdl2/lib/libSDL2.a -lGL -lm -lpthread 
+          gcc -o runtime -O2 -DYARNSPIN_RUNTIME_ONLY source/yarnspin.c  /usr/lib/x86_64-linux-gnu/libGLEW.a `$PWD/SDL2-2.28.1/sdl2/bin/sdl2-config --cflags` $PWD/SDL2-2.28.1/sdl2/lib/libSDL2.a -lGL -lm -lpthread 
   build-wasm:
     runs-on: windows-2019
     steps:
@@ -82,7 +95,7 @@ jobs:
           fileName: "dos-like-wasm-build-env-win.zip"
       - name: install dependencies
         run: 7z x dos-like-wasm-build-env-win.zip
-      - name: build yarnspin
+      - name: build sound
         run: |          
             wasm\node wasm\wajicup.js source/yarnspin.c yarnspin.html
   build-wasm-macos:
