--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,7 +1,9 @@
 name: publish
  
-on: [release]
-
+on:
+  release:
+    types: [published]
+    
 permissions:
   contents: write
  
@@ -19,7 +21,7 @@ jobs:
           fileName: "dos-like-wasm-build-env-win.zip" 
       - name: install dependencies 
         run: 7z -y x dos-like-wasm-build-env-win.zip 
-      - name: build yarnspin
+      - name: build yarnspin 
         run: | 
           pushd build
           rc /nologo yarnspin.rc
@@ -52,7 +54,7 @@ jobs:
           brew install sdl2 glew llvm binaryen
           brew link --force llvm
           7z -y x dos-like-wasm-build-env-win.zip 
-      - name: build yarnspin
+      - name: build yarnspin 
         run: | 
           clang -o yarnspin -O2 source/yarnspin.c /usr/local/lib/libGLEW.a `sdl2-config --static-libs --cflags` -framework OpenGL -lpthread 
           chmod a+x yarnspin
@@ -66,7 +68,8 @@ jobs:
           mv runtime build
           mv runtime.wasm build
           cp wasm/wajicup.js build
-          tar -czvf yarnspin-mac.tar.gz yarnspin faces fonts images palettes scripts build/runtime build/runtime.wasm build/wajicup.js build/template.html
+          cp /usr/local/bin/node build
+          tar -czvf yarnspin-mac.tar.gz yarnspin faces fonts images palettes scripts build/runtime build/runtime.wasm build/wajicup.js build/node build/template.html
       - name: upload artifacts
         uses: softprops/action-gh-release@v1
         with:
@@ -79,23 +82,33 @@ jobs:
       - uses: actions/checkout@v1 
       - uses: robinraju/release-downloader@v1.7 
         with: 
+          repository: "libsdl-org/SDL" 
+          tag: "release-2.28.1" 
+          fileName: "SDL2-2.28.1.tar.gz" 
+      - uses: robinraju/release-downloader@v1.7 
+        with: 
           repository: "mattiasgustavsson/dos-like" 
           tag: "wasm-env" 
           fileName: "dos-like-wasm-build-env-win.zip" 
       - name: install dependencies 
         run: | 
           sudo apt-get update 
-          sudo apt-get install -qq libsdl2-dev 
           sudo apt-get install -qq libglew-dev 
           sudo apt-get install -qq llvm 
           sudo apt-get install -qq lld 
           sudo apt-get install -qq binaryen
           7z -y x dos-like-wasm-build-env-win.zip 
-      - name: build yarnspin
+          tar -xzvf SDL2-2.28.1.tar.gz
+      - name: build yarnspin 
         run: | 
-          gcc -o yarnspin -O2 source/yarnspin.c `sdl2-config --libs --cflags` -lGLEW -lGL -lm -lpthread 
+          cd SDL2-2.28.1
+          ./configure --disable-shared --enable-static --prefix=$PWD/sdl2
+          make
+          make install
+          cd ..
+          gcc -o yarnspin -O2 source/yarnspin.c /usr/lib/x86_64-linux-gnu/libGLEW.a `$PWD/SDL2-2.28.1/sdl2/bin/sdl2-config --cflags` $PWD/SDL2-2.28.1/sdl2/lib/libSDL2.a -lGL -lm -lpthread 
           chmod a+x yarnspin
-          gcc -o runtime -O2 -DYARNSPIN_RUNTIME_ONLY source/yarnspin.c `sdl2-config --libs --cflags` -lGLEW -lGL -lm -lpthread 
+          gcc -o runtime -O2 -DYARNSPIN_RUNTIME_ONLY source/yarnspin.c  /usr/lib/x86_64-linux-gnu/libGLEW.a `$PWD/SDL2-2.28.1/sdl2/bin/sdl2-config --cflags` $PWD/SDL2-2.28.1/sdl2/lib/libSDL2.a -lGL -lm -lpthread 
           chmod a+x runtime
           clang -cc1 -triple wasm32 -emit-obj -fcolor-diagnostics -Iwasm/ -D__WAJIC__ -isystem./wasm/system/include/libcxx -isystem./wasm/system/lib/libcxx/include -isystem./wasm/system/include/compat -isystem./wasm/system/include -isystem./wasm/system/include/libc -isystem./wasm/system/lib/libc/musl/include -isystem./wasm/system/lib/libc/musl/arch/emscripten -isystem./wasm/system/lib/libc/musl/arch/generic -mconstructor-aliases -fvisibility hidden -fno-threadsafe-statics -fno-common -fgnuc-version=4.2.1 -D__EMSCRIPTEN__ -D_LIBCPP_ABI_VERSION=2 -D_POSIX_C_SOURCE -DNDEBUG -Os -x c -std=c99 -o runtime.o source/yarnspin.c
           wasm-ld -strip-all -gc-sections --no-entry -allow-undefined -export=__wasm_call_ctors -export=main -export=__original_main -export=__main_argc_argv -export=__main_void -export=malloc ./wasm/system/system.bc runtime.o -o runtime.wasm
@@ -104,7 +117,8 @@ jobs:
           mv runtime build
           mv runtime.wasm build
           cp wasm/wajicup.js build
-          tar -czvf yarnspin-linux.tar.gz yarnspin faces fonts images palettes scripts build/runtime build/runtime.wasm build/wajicup.js build/template.html
+          cp /usr/local/bin/node build
+          tar -czvf yarnspin-linux.tar.gz yarnspin faces fonts images palettes scripts build/runtime build/runtime.wasm build/wajicup.js build/node build/template.html
       - name: upload artifacts
         uses: softprops/action-gh-release@v1
         with:
