--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -69,8 +69,18 @@ jobs:
           files: yarnspin-win.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: upload runtime.html artifact
+        uses: actions/upload-artifact@master
+        with:
+          name: runtime.html
+          path: ./build/runtime.html
+      - name: upload runtime.wasm artifact
+        uses: actions/upload-artifact@master
+        with:
+          name: runtime.wasm
+          path: ./build/runtime.wasm
   publish-macos: 
-    needs: build-docs
+    needs: publish-windows
     runs-on: macOS-latest 
     steps: 
       - uses: actions/checkout@v1 
@@ -83,6 +93,14 @@ jobs:
         with:
           name: yarnspin.pdf
           path: .
+      - uses: actions/download-artifact@master
+        with:
+          name: runtime.html
+          path: .
+      - uses: actions/download-artifact@master
+        with:
+          name: runtime.wasm
+          path: .
       - name: install dependencies 
         run: | 
           brew install sdl2 glew llvm binaryen
@@ -94,14 +112,6 @@ jobs:
           chmod a+x yarnspin
           clang -o runtime  -O2 -DYARNSPIN_RUNTIME_ONLY source/yarnspin.c /usr/local/lib/libGLEW.a `sdl2-config --static-libs --cflags` -framework OpenGL -lpthread 
           chmod a+x runtime
-          echo 'clang "$@"' > wasm/clang
-          chmod a+x wasm/clang
-          echo 'wasm-ld "$@"' > wasm/wasm-ld
-          chmod a+x wasm/wasm-ld
-          echo 'wasm-opt "$@"' > wasm/wasm-opt
-          chmod a+x wasm/wasm-opt
-          node wasm/wajicup.js source/yarnspin.c runtime.wasm
-          node wasm/wajicup.js -template build/template.html runtime.wasm runtime.html -no_minify
           mv runtime build
           mv runtime.wasm build
           mv runtime.html build
@@ -113,7 +123,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   publish-linux: 
-    needs: build-docs
+    needs: publish-windows
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v1 
@@ -130,6 +140,14 @@ jobs:
       - uses: actions/download-artifact@master
         with:
           name: yarnspin.pdf
+          path: .
+      - uses: actions/download-artifact@master
+        with:
+          name: runtime.html
+          path: .
+      - uses: actions/download-artifact@master
+        with:
+          name: runtime.wasm
           path: .
       - name: install dependencies 
         run: | 
@@ -151,11 +169,6 @@ jobs:
           chmod a+x yarnspin
           gcc -o runtime -O2 -DYARNSPIN_RUNTIME_ONLY source/yarnspin.c  /usr/lib/x86_64-linux-gnu/libGLEW.a `$PWD/SDL2-2.28.1/sdl2/bin/sdl2-config --cflags` $PWD/SDL2-2.28.1/sdl2/lib/libSDL2.a -lGL -lm -lpthread 
           chmod a+x runtime
-          clang -cc1 -triple wasm32 -emit-obj -fcolor-diagnostics -Iwasm/ -D__WAJIC__ -isystem./wasm/system/include/libcxx -isystem./wasm/system/lib/libcxx/include -isystem./wasm/system/include/compat -isystem./wasm/system/include -isystem./wasm/system/include/libc -isystem./wasm/system/lib/libc/musl/include -isystem./wasm/system/lib/libc/musl/arch/emscripten -isystem./wasm/system/lib/libc/musl/arch/generic -mconstructor-aliases -fvisibility hidden -fno-threadsafe-statics -fno-common -fgnuc-version=4.2.1 -D__EMSCRIPTEN__ -D_LIBCPP_ABI_VERSION=2 -D_POSIX_C_SOURCE -DNDEBUG -Os -x c -std=c99 -o runtime.o source/yarnspin.c
-          wasm-ld -strip-all -gc-sections --no-entry -allow-undefined -export=__wasm_call_ctors -export=main -export=__original_main -export=__main_argc_argv -export=__main_void -export=malloc ./wasm/system/system.bc runtime.o -o runtime.wasm
-          wasm-opt --asyncify runtime.wasm -o runtime.wasm
-          wasm-opt --legalize-js-interface --low-memory-unused --converge -Os runtime.wasm -o runtime.wasm
-          node wasm/wajicup.js -template build/template.html runtime.wasm runtime.html -no_minify
           mv runtime build
           mv runtime.wasm build
           mv runtime.html build
@@ -173,3 +186,9 @@ jobs:
       - uses: geekyeggo/delete-artifact@v2
         with:
           name: yarnspin.pdf
+      - uses: geekyeggo/delete-artifact@v2
+        with:
+          name: runtime.html
+      - uses: geekyeggo/delete-artifact@v2
+        with:
+          name: runtime.wasm
