--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: robinraju/release-downloader@v1.7 
+      - uses: robinraju/release-downloader@v1 
         with: 
           repository: "libsdl-org/SDL" 
           tag: "release-2.28.1" 
@@ -103,19 +103,19 @@ jobs:
     runs-on: macOS-latest
     steps:
       - uses: actions/checkout@v1 
-      - uses: robinraju/release-downloader@v1.7 
+      - uses: robinraju/release-downloader@v1 
         with: 
           repository: "mattiasgustavsson/dos-like" 
           tag: "wasm-env" 
           fileName: "dos-like-wasm-build-env-win.zip" 
       - name: install dependencies 
         run: | 
-          brew install llvm binaryen
+          brew install clang-17 llvm binaryen
           7z -y x dos-like-wasm-build-env-win.zip 
       - name: build yarnspin 
         run: | 
           export PATH="/usr/local/opt/llvm/bin:$PATH"
-          clang -cc1 -triple wasm32 -emit-obj -fcolor-diagnostics -Iwasm/ -D__WAJIC__ -isystem./wasm/system/include/libcxx -isystem./wasm/system/lib/libcxx/include -isystem./wasm/system/include/compat -isystem./wasm/system/include -isystem./wasm/system/include/libc -isystem./wasm/system/lib/libc/musl/include -isystem./wasm/system/lib/libc/musl/arch/emscripten -isystem./wasm/system/lib/libc/musl/arch/generic -mconstructor-aliases -fvisibility=hidden -fno-threadsafe-statics -fno-common -fgnuc-version=4.2.1 -D__EMSCRIPTEN__ -D_LIBCPP_ABI_VERSION=2 -D_POSIX_C_SOURCE -DNDEBUG -Os -x c -std=c99 -o runtime.o source/yarnspin.c
+          clang-17 -cc1 -triple wasm32 -emit-obj -fcolor-diagnostics -Iwasm/ -D__WAJIC__ -isystem./wasm/system/include/libcxx -isystem./wasm/system/lib/libcxx/include -isystem./wasm/system/include/compat -isystem./wasm/system/include -isystem./wasm/system/include/libc -isystem./wasm/system/lib/libc/musl/include -isystem./wasm/system/lib/libc/musl/arch/emscripten -isystem./wasm/system/lib/libc/musl/arch/generic -mconstructor-aliases -fvisibility=hidden -fno-threadsafe-statics -fno-common -fgnuc-version=4.2.1 -D__EMSCRIPTEN__ -D_LIBCPP_ABI_VERSION=2 -D_POSIX_C_SOURCE -DNDEBUG -Os -x c -std=c99 -o runtime.o source/yarnspin.c
           wasm-ld -strip-all -gc-sections --no-entry -allow-undefined -export=__wasm_call_ctors -export=main -export=__original_main -export=__main_argc_argv -export=__main_void -export=malloc ./wasm/system/system.bc runtime.o -o runtime.wasm  
           wasm-opt --asyncify runtime.wasm -o runtime.wasm
           wasm-opt --legalize-js-interface --low-memory-unused --converge -Os runtime.wasm -o runtime.wasm
@@ -123,28 +123,22 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - uses: actions/checkout@v1 
-      - uses: robinraju/release-downloader@v1.7 
+      - uses: robinraju/release-downloader@v1 
         with: 
           repository: "mattiasgustavsson/dos-like" 
           tag: "wasm-env" 
           fileName: "dos-like-wasm-build-env-win.zip" 
-      - name: install clang 17
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y clang-17 lld-17
-          sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-17 100
-          sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-17 100
-          clang-17 --version
       - name: install dependencies 
         run: | 
           sudo apt-get update 
-          sudo apt-get install -qq llvm 
-          sudo apt-get install -qq lld 
+          sudo apt-get install -qq clang-17
+          sudo apt-get install -qq llvm-17 
+          sudo apt-get install -qq lld-17 
           sudo apt-get install -qq binaryen
           7z -y x dos-like-wasm-build-env-win.zip 
       - name: build yarnspin 
         run: | 
           clang-17 -cc1 -triple wasm32 -emit-obj -fcolor-diagnostics -Iwasm/ -D__WAJIC__ -isystem./wasm/system/include/libcxx -isystem./wasm/system/lib/libcxx/include -isystem./wasm/system/include/compat -isystem./wasm/system/include -isystem./wasm/system/include/libc -isystem./wasm/system/lib/libc/musl/include -isystem./wasm/system/lib/libc/musl/arch/emscripten -isystem./wasm/system/lib/libc/musl/arch/generic -mconstructor-aliases -fvisibility=hidden -fno-threadsafe-statics -fno-common -fgnuc-version=4.2.1 -D__EMSCRIPTEN__ -D_LIBCPP_ABI_VERSION=2 -D_POSIX_C_SOURCE -DNDEBUG -Os -x c -std=c99 -o runtime.o source/yarnspin.c
-          wasm-ld -strip-all -gc-sections --no-entry -allow-undefined -export=__wasm_call_ctors -export=main -export=__original_main -export=__main_argc_argv -export=__main_void -export=malloc ./wasm/system/system.bc runtime.o -o runtime.wasm
-          wasm-opt --asyncify runtime.wasm -o runtime.wasm
-          wasm-opt --legalize-js-interface --low-memory-unused --converge -Os runtime.wasm -o runtime.wasm
+          wasm-ld-17 -strip-all -gc-sections --no-entry -allow-undefined -export=__wasm_call_ctors -export=main -export=__original_main -export=__main_argc_argv -export=__main_void -export=malloc ./wasm/system/system.bc runtime.o -o runtime.wasm
+          wasm-opt-17 --asyncify runtime.wasm -o runtime.wasm
+          wasm-opt-17 --legalize-js-interface --low-memory-unused --converge -Os runtime.wasm -o runtime.wasm
